--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,2 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+  <application android:theme="@style/AppTheme">
+    <activity android:name="com.capacitor.jitsi.plugin.JitsiActivity"
+              android:excludeFromRecents="true"
+              android:supportsPictureInPicture="false"
+              android:resizeableActivity="true"
+              android:launchMode="singleTask"
+              android:theme="@style/AppTheme.NoActionBar"
+              android:windowSoftInputMode="adjustResize"
+              android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode">
+    </activity>
+  </application>
 </manifest>
