change npm license info

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "CapacitorJitsiMeet.podspec"
   ],
   "author": "CollabWorkx LLC",
-  "license": "MIT",
+  "license": "Apache License 2.0",
   "keywords": [
     "capacitor",
     "plugin",
