--- a/android/build.gradle
+++ b/android/build.gradle
@@ -52,8 +52,10 @@ repositories {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    implementation ('org.jitsi.react:jitsi-meet-sdk:11.1.0') { transitive = true }
+    implementation ('org.jitsi.react:jitsi-meet-sdk:11.3.1') { transitive = true }
     implementation 'androidx.activity:activity:1.2.3'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
 
     // Firebase
     implementation 'com.google.firebase:firebase-dynamic-links:16.1.5'
