--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -2,9 +2,9 @@
   <application android:theme="@style/AppTheme">
     <activity android:name="com.capacitor.jitsi.plugin.JitsiActivity"
               android:excludeFromRecents="true"
-              android:supportsPictureInPicture="false"
+              android:supportsPictureInPicture="true"
               android:resizeableActivity="true"
-              android:launchMode="singleTask"
+              android:launchMode="singleTop"
               android:theme="@style/AppTheme.NoActionBar"
               android:windowSoftInputMode="adjustResize"
               android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|smallestScreenSize|screenLayout|uiMode">
