--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@collabworkx/capacitor-jitsimeet-plugin",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "A Jitsi meet plugin adjusted for modern hardware",
   "main": "dist/esm/index.js",
   "module": "dist/esm/index.js",
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "@capacitor/cli": "^7.0.0",
-    "@capacitor/core": "^7.0.0"
+    "@capacitor/core": ">=7.0.0",
+    "@rollup/rollup-win32-x64-msvc": "^4.45.1"
   },
   "peerDependencies": {
     "@capacitor/core": ">=7.0.0"
