--- a/package.json
+++ b/package.json
@@ -42,8 +42,7 @@
   },
   "dependencies": {
     "@capacitor/cli": "^7.0.0",
-    "@capacitor/core": ">=7.0.0",
-    "@rollup/rollup-win32-x64-msvc": "^4.45.1"
+    "@capacitor/core": ">=7.0.0"
   },
   "peerDependencies": {
     "@capacitor/core": ">=7.0.0"
